# spacypdfreader

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.ipynb  README.md  TODO.md  _multi_test.py  _out_single.txt  _test_docs.py  _tmp.py  hooks.py  index.html  justfile  mkdocs.yml  multi_test.py  netlify.toml  objects.inv  pydoc-markdown.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-docs.yml  ci.yml  docs.yml  pytest.yml  python-app.yml
api/spacy-extensions/: index.html
api/spacypdfreader.parsers/: index.html
api/spacypdfreader.spacypdfreader/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  hooks.py  index.md  multiprocessing.md  parsers.md
docs/api/: .pages  console.md  generate-api-docs.py  overview.md  parsers.base.md  parsers.md  parsers.pdfminer.md  parsers.pytesseract.md  spacy-extensions.md  spacy-extenstions.md  spacypdfreader.parsers.base.md  spacypdfreader.parsers.md  spacypdfreader.parsers.pdfminer.md  spacypdfreader.parsers.pytesseract.md  spacypdfreader.spacypdfreader.md
multiprocessing/: index.html
notebooks/: spacypdfreader-demo.ipynb
parsers/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/spacy-extensions/: index.html
site/api/spacypdfreader.parsers/: index.html
site/api/spacypdfreader.spacypdfreader/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/parsers/: index.html
spacypdfreader/: __init__.py  _utils.py  spacypdfreader.py
spacypdfreader/parsers/: base.py  pdfminer.py  pytesseract.py
src/spacypdfreader/: _utils.py
src/spacypdfreader/parsers/: pdfminer.py
tests/: test_backwards_compatbility.py  test_page_range.py  test_pdfminer.py  test_pytesseract.py  test_spacypdfreader.py
website/: changelog.md  mkdocs.yml  parsers.md
website/snippets/: example.py
