[project]
name = "spacypdfreader"
version = "0.3.2"
description = "A PDF to text extraction pipeline component for spaCy."
license = "MIT"
readme = "README.md"
maintainers = [
  {name = "Sam Edwardes", email = "edwardes.s@gmail.com"}
]
keywords = ["python", "spacy", "nlp", "pdf", "pdfs"]
requires-python = ">=3.9"
dependencies = [
    "pdfminer-six>=20240706",
    "rich>=13.9.2",
    "spacy>=3.8.2",
]

[project.urls]
Homepage = "https://samedwardes.github.io/spacypdfreader"
Documentation = "https://samedwardes.github.io/spacypdfreader"
Repository = "https://github.com/SamEdwardes/spaCyPDFreader.git"
Issues = "https://github.com/SamEdwardes/spaCyPDFreader/issues"
Changelog = "https://github.com/SamEdwardes/spacypdfreader/blob/main/docs/changelog.md"

[project.optional-dependencies]
pytesseract = [
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-material>=9.5.39",
    "pytest>=8.3.3",
    "en-core-web-sm",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
