[project]
name = "spacypdfreader"
version = "0.4.0"
description = "A PDF to text extraction pipeline component for spaCy."
license = "MIT"
readme = "README.md"
maintainers = [{ name = "Sam Edwardes", email = "edwardes.s@gmail.com" }]
keywords = ["python", "spacy", "nlp", "pdf", "pdfs"]
requires-python = ">=3.9, <3.14"
dependencies = ["pdfminer-six>=20240706", "rich>=13.9.2", "spacy>=3.8.7"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://samedwardes.github.io/spacypdfreader"
Documentation = "https://samedwardes.github.io/spacypdfreader"
Repository = "https://github.com/SamEdwardes/spaCyPDFreader.git"
Issues = "https://github.com/SamEdwardes/spaCyPDFreader/issues"
Changelog = "https://github.com/SamEdwardes/spacypdfreader/blob/main/docs/changelog.md"

[project.optional-dependencies]
pytesseract = ["pdf2image>=1.17.0", "pillow>=10.4.0", "pytesseract>=0.3.13"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"


[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-include-markdown-plugin>=6.2.2",
  "mkdocs-material>=9.5.39",
  "pytest>=8.3.3",
  "en-core-web-sm",
  "mkdocstrings>=0.26.1",
  "mkdocstrings-python>=1.11.1",
]
